--- a/login.html
+++ b/login.html
@@ -1,13 +1,11 @@
 <html>
     <head>
         <title>
-            My first app
+            Login
         </title>
     </head>
     <body>
-        <div>
-            <br>
-        </div>
+        
     </body>
 
 
